--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,8 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
-pandas==2.1.3
-numpy==1.26.2
+pandas>=2.2.3
+numpy>=1.26.0,<2.0.0
 openai==1.3.5
 python-dotenv==1.0.0
 python-multipart==0.0.6
