--- a/backend/env.example
+++ b/backend/env.example
@@ -11,6 +11,6 @@ DEBUG=True
 API_HOST=0.0.0.0
 API_PORT=8000
 
-# CORS Configuration
-CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+# CORS Configuration (comma-separated list of allowed origins)
+CORS_ORIGINS=http://localhost:5173,http://localhost:3000,https://speakinsights-prototype.onrender.com
 
